--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -13,6 +13,16 @@
       href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
       integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
       crossorigin="anonymous" />
+    <!-- Google tag (gtag.js) -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-0TDNEPW9M7"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-0TDNEPW9M7');
+      </script>
+    <!-- end Google tag -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
